--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
+    "format:write": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format": "npm run format:write && npm run format:check",
     "build:server": "tsc",
     "build:client": "vite build",
-    "build": "npm run build:server && npm run build:client",
+    "build": "npm run format && npm run build:server && npm run build:client",
     "start": "node dist/server.js",
     "dev:server": "nodemon src/server.ts",
     "dev:client": "vite",
@@ -24,7 +27,8 @@
     "marked": "^16.2.0",
     "multer": "^2.0.2",
     "rss": "^1.2.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "xpdf-viewer": "^3.1.4"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
@@ -36,6 +40,7 @@
     "@types/rss": "^0.0.32",
     "@types/sharp": "^0.31.1",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
